Login controller completed for new device

--- a/emails/reset password/html.hbs
+++ b/emails/reset password/html.hbs
@@ -150,7 +150,12 @@
                       </h1>
                       <p>Please click
                         <a href="{{link}}">here</a>
-                        to reset your Password</p>
+                        to reset your topgym Password</p>
+
+                      <p>Or, copy and paste the following URL into your browser:
+
+                        {{link}}
+                      </p>
                     </td>
                   </tr>
                 </table>
