--- a/emails/verify email/html.hbs
+++ b/emails/verify email/html.hbs
@@ -148,7 +148,10 @@
                         Hi
                         {{name}},
                       </h1>
-                      <p>Copy the code below for use to verify your account</p>
+                      <p>To activate your Topgym Account, please verify your
+                        email address. Your account will not be created until
+                        your email address is confirmed. Copy the code below for
+                        use to verify your account</p>
                       <h3>{{token}}</h3>
                     </td>
                   </tr>
