corrections made to email templates

--- a/emails/verify email/html.hbs
+++ b/emails/verify email/html.hbs
@@ -222,8 +222,8 @@
                         align="center"
                       >
                         {{company_name}}
-                        <br />1234 Street Rd.
-                        <br />Suite 1234
+                        <br />1 Kumasi Crescent,
+                        <br />Wuse 2 904101, Abuja
                       </p>
                     </td>
                   </tr>
