--- a/frontend/src/pages/Contact/style.module.scss
+++ b/frontend/src/pages/Contact/style.module.scss
@@ -13,6 +13,7 @@ $display_2: grid;
   padding-top: 10px;
   padding-bottom: 20px;
   margin-top: 50px;
+  text-align: center;
 }
 
 .gridContainer {
