--- a/frontend/src/pages/About/style.module.scss
+++ b/frontend/src/pages/About/style.module.scss
@@ -4,41 +4,14 @@ $primary_3: #ffffff;
 $font_size: 16px;
 $display_1: flex;
 
-.container {
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: #000000;
+p {
   text-align: center;
-  padding-bottom: 2rem;
-}
-
-.section1 {
-  padding-top: 10px;
-  padding-bottom: 20px;
-  margin-top: 25px;
-}
-
-.section2 {
-  padding-top: 10px;
-  padding-bottom: 20px;
 }
 
 .heading {
-  font-size: 22px;
+  text-align: center;
+  font-size: 24px;
   font-weight: bold;
-}
-
-.pContainer {
-  width: 800px;
-}
-
-.images {
-  display: $display_1;
-  justify-content: center;
-  align-items: center;
 }
 
 .img {
@@ -54,9 +27,4 @@ $display_1: flex;
   font-size: 14px;
   margin-top: 15px;
   font-weight: bold;
-}
-
-.Button {
-  text-align: center;
-  width: 40%;
 }
